# pixi_template

./: .env  .gitignore  .pre-commit-config.yaml  README.md  commands.py  conda.py  pyproject.toml  requirements.txt
ado/pipelines/: inference.yml
ado/pipelines/templates/: compute.yml  deployment.yml  deployment_delete.yml  deployment_names.yml  endpoint.yml  endpoint_deploy_jobs.yml  endpoint_invoke.yml  endpoint_traffic.yml  environment.yml  environment_shared.yml  evaluate.yml  model.yml  model_download.yml  model_release.yml  model_shared.yml  python.yml  train.yml
ado/pipelines/variables/: dev.yml  global.yml  prod.yml  stg.yml
ado/scripts/: compute.py  data.py  deployment.py  deployment_delete.py  deployment_names.py  endpoint.py  endpoint_delete.py  endpoint_invoke.py  endpoint_traffic.py  environment.py  environment_shared.py  evaluate.py  model.py  model_download.py  model_release.py  model_shared.py  train.py
main/label/azure/: main.py
main/label/azure/scripts/: eda.py  load.py  preprocess.py
main/label/prodigy/: instructions.txt  main.py
main/label/prodigy/local/: prodigy.json
main/label/prodigy/remote/: Dockerfile  docker-compose.yml
main/visualise/: Dockerfile  app.py  docker-compose.yml
main/visualise/.streamlit/: config.toml
mlops/.aml/: config.json
mlops/environment/: Dockerfile  conda_features.yml  conda_inference.yml  conda_training.yml
mlops/features/processed/: main.py
mlops/features/processed/scripts/: eda.py  load.py  preprocess.py  resample.py  similarity.py
mlops/features/raw/: main.py
mlops/features/raw/data/: markets.csv  query.sql
mlops/features/raw/scripts/: extract.py  load.py  preprocess.py  translator.py
mlops/inference/: main.py
mlops/inference/code/: score.py  validate.py
mlops/inference/code/scripts/: preprocess.py  translator.py
mlops/inference/tests/: invoke.py
mlops/training/: main.py
mlops/training/configs/: main.py
mlops/training/corpus/: main.py
mlops/training/evaluate/: main.py
mlops/training/scripts/: convert.py  eda.py  evaluate.py  functions.py  load.py  split.py  stratify.py  visualize.py
(+2 files in other folders)
